--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -16,16 +16,8 @@ jobs:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v1
 
-    - name: Get dependencies
-      run: |
-        go get -v -t -d ./...
-        if [ -f Gopkg.toml ]; then
-            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-            dep ensure
-        fi
-
     - name: Test
-      run: GOFLAGS="-mod=vendor" go test -v ./...
+      run: GOFLAGS="-mod=readonly" go test -v ./...
       
     - name: Build
-      run: GOFLAGS="-mod=vendor" go build -v ./...
+      run: GOFLAGS="-mod=readonly" go build -v ./...
