--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/checkout@v1
 
     - name: Test
-      run: GOFLAGS="-mod=readonly" go test -v ./...
+      run: GOFLAGS="-mod=vendor" go test -v ./...
       
     - name: Build
-      run: GOFLAGS="-mod=readonly" go build -v ./...
+      run: GOFLAGS="-mod=vendor" go build -v ./...
